# rapace

./: .gitignore  Cargo.toml  DESIGN.md  README.md  SHM_TUNNEL_DIAGNOSIS.md  conductor.json  nuke-conformance-tests.py  replace_tokio_main.py
.cargo-husky/hooks/: pre-commit  pre-push
.claude/: settings.local.json
.config/: nextest.toml
.config/tracey/: config.kdl
.github/workflows/: ci.yml
.readme-templates/: rapace-transport-websocket.md.in
conformance/: Cargo.toml  README.md
conformance/src/: harness.rs  lib.rs  main.rs  protocol.rs  testcase.rs
conformance/src/tests/: call.rs  cancel.rs  channel.rs  control.rs  error.rs  flow.rs  frame.rs  handshake.rs  method.rs  mod.rs  stream.rs  transport.rs  tunnel.rs
conformance/tests/: conformance.rs  coverage.rs
crates/rapace/: CHANGELOG.md  Cargo.toml
crates/rapace-cell/: CHANGELOG.md  Cargo.toml  README.md  README.md.in
crates/rapace-cell/src/: lib.rs  lifecycle.rs  tracing_setup.rs
crates/rapace-cell/tests/: dispatcher_builder.rs
crates/rapace-core/: CHANGELOG.md  Cargo.toml  arborium-header.html
crates/rapace-core/src/: buffer_pool.rs  error.rs  frame.rs  handle.rs  lib.rs  session.rs  transport.rs  tunnel_stream.rs
crates/rapace-core/src/transport/: mem.rs  stream.rs  websocket.rs
crates/rapace-core/src/transport/shm/: hub_host.rs  hub_transport.rs  transport.rs
crates/rapace-core/tests/: shm_hub_roundtrip.rs  transport_conformance.rs
crates/rapace-explorer/: Cargo.toml
crates/rapace-http/: Cargo.toml
crates/rapace-introspection/: Cargo.toml
crates/rapace-introspection/src/: lib.rs
crates/rapace-macros/: CHANGELOG.md  Cargo.toml
crates/rapace-macros/src/: lib.rs  parser.rs
crates/rapace-macros/tests/: compile_fail.rs
crates/rapace-macros/tests/ui/fail/: mut_self_receiver.rs  mut_self_receiver.stderr  owned_self_receiver.rs  owned_self_receiver.stderr
crates/rapace-registry/: Cargo.toml
crates/rapace-registry/src/: introspection.rs  lib.rs
crates/rapace-testkit/: CHANGELOG.md
crates/rapace-testkit/src/: bidirectional.rs  lib.rs
crates/rapace-tracing/: CHANGELOG.md  Cargo.toml
crates/rapace-tracing/src/: lib.rs
crates/rapace-transport-mem/: CHANGELOG.md  Cargo.toml
crates/rapace-transport-mem/src/: lib.rs
crates/rapace-transport-shm/: CHANGELOG.md  Cargo.toml
crates/rapace-transport-shm/src/: alloc.rs  doorbell.rs  futex.rs  hub_transport.rs  transport.rs
crates/rapace-transport-stream/: CHANGELOG.md  Cargo.toml
crates/rapace-transport-stream/src/: lib.rs
crates/rapace-transport-websocket/: CHANGELOG.md  Cargo.toml  README.md
crates/rapace-transport-websocket/src/: handle.rs  lib.rs
crates/rapace/examples/: arc_service.rs  basic.rs  tcp_client.rs  tcp_server.rs
crates/rapace/src/: lib.rs  session.rs
crates/rapace/tests/: arc_impl.rs  method_ids_generation.rs  result_return_type.rs
crates/ur-taking-me-with-you/: CHANGELOG.md  Cargo.toml
demos/browser-tests-client/: Cargo.toml  index.html  package-lock.json  package.json  playwright.config.ts
demos/browser-tests-client/src/: lib.rs
demos/browser-tests-client/tests/: rapace.spec.ts
demos/browser-tests-proto/: Cargo.toml
demos/browser-tests-proto/src/: lib.rs
demos/browser-tests-server/: Cargo.toml
demos/browser-tests-server/src/: main.rs
demos/dashboard/: Cargo.toml
demos/dashboard/src/: main.rs
demos/demo-helper-common/: Cargo.toml
demos/demo-helper-common/src/: lib.rs
demos/diagnostics-over-rapace/: Cargo.toml
demos/diagnostics-over-rapace/src/: helper.rs  main.rs
demos/diagnostics-over-rapace/tests/: cross_process.rs
demos/http-over-rapace/: Cargo.toml
demos/http-over-rapace/src/: helper.rs  main.rs
demos/http-over-rapace/tests/: cross_process.rs
demos/http-tunnel/: Cargo.toml
demos/http-tunnel/src/: baseline.rs  host_bin.rs  main.rs  plugin_bin.rs
demos/http-tunnel/tests/: integration.rs
demos/service-registry-simple/: Cargo.toml
demos/service-registry-simple/src/: main.rs
demos/shm-image/: Cargo.toml
demos/shm-image/src/: main.rs
demos/template-engine/: Cargo.toml
demos/template-engine/src/: helper.rs  main.rs
demos/template-engine/tests/: cross_process.rs  peer_death.rs
demos/tracing-over-rapace/: Cargo.toml
demos/tracing-over-rapace/src/: helper.rs  main.rs
demos/tracing-over-rapace/tests/: cross_process.rs
docs/content/: _index.md
docs/content/guide/: _index.md  architecture.md  plugins.md
docs/content/spec/: _index.md  cancellation.md  compliance.md  core.md  frame-format.md  handshake.md  metadata.md  overload.md  payload-encoding.md  prioritization.md  security.md  transport-bindings.md
docs/static/css/: style.css
examples/: README.md  echo_client.rs  echo_server.rs  stress_test.rs
examples/http_tunnel/src/: host_bin.rs  plugin_bin.rs
fuzz/: README.md  README.md.in
rust/rapace-axum-serve/src/: lib.rs
rust/rapace-cell/: Cargo.toml
rust/rapace-cell/src/: lib.rs
rust/rapace-core/: Cargo.toml
rust/rapace-core/src/: buffer_pool.rs  control.rs  descriptor.rs  error.rs  flags.rs  frame.rs  lib.rs  owned_message.rs  session.rs  transport.rs  validation.rs
rust/rapace-core/tests/: transport_conformance.rs
rust/rapace-explorer/src/: lib.rs
rust/rapace-http/src/: lib.rs
rust/rapace-introspection/src/: lib.rs
rust/rapace-macros/src/: crate_name.rs  lib.rs
rust/rapace-protocol/: Cargo.toml
rust/rapace-protocol/src/: lib.rs
rust/rapace-registry/src/: lib.rs
rust/rapace-tracing/src/: lib.rs
rust/rapace/src/: lib.rs
rust/shm-primitives/: Cargo.toml
rust/shm-primitives/src/: doorbell.rs  futex.rs  lib.rs
scripts/: pre-push  setup.sh
spec-peer/src/tests/: call.rs  mod.rs  (+5 more)
spec-subject/: Cargo.toml
spec-subject/src/: main.rs
spec-tester/src/: harness.rs  lib.rs
spec-tests/: Cargo.toml
spec-tests/tests/: spec.rs
src/: alloc.rs  channel.rs  control.rs  doorbell.rs  frame.rs  layout.rs  lib.rs  shm.rs
swift/: Package.swift
tests/: integration.rs
typescript/src/: conformance-runner.ts  conformance.test.ts  coverage.test.ts
xtask/: Cargo.toml  README.md  README.md.in
xtask/src/: main.rs
(+34 files in other folders)
