[workspace]
resolver = "2"
members = [
    "rust/rapace",
    "rust/rapace-core",
    "rust/rapace-protocol",
    "rust/rapace-http",
    "rust/rapace-macros",
    "rust/rapace-cell",
    "rust/rapace-introspection",
    "rust/rapace-registry",
    "rust/rapace-tracing",
    "rust/shm-primitives",
    "rust/rapace-explorer",
    "rust/rapace-axum-serve",
    "rust/ur-taking-me-with-you",
    "demos/dashboard",
    "demos/browser-tests-proto",
    "demos/browser-tests-server",
    "demos/browser-tests-client",
    "demos/demo-helper-common",
    "demos/http-over-rapace",
    "demos/diagnostics-over-rapace",
    "demos/template-engine",
    "demos/tracing-over-rapace",
    "demos/http-tunnel",
    "test-external-service",
    "xtask",
    "conformance",
]
exclude = ["fuzz"]

[workspace.package]
version = "0.5.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/rapace"

[workspace.dependencies]
# Internal crates
rapace = { path = "rust/rapace", version = "0.5.0" }
rapace-core = { path = "rust/rapace-core", version = "0.5.0" }
rapace-protocol = { path = "rust/rapace-protocol", version = "0.5.0" }
rapace-http = { path = "rust/rapace-http", version = "0.5.0" }
rapace-macros = { path = "rust/rapace-macros", version = "0.5.0" }
rapace-registry = { path = "rust/rapace-registry", version = "0.5.0" }
rapace-tracing = { path = "rust/rapace-tracing", version = "0.5.0" }
shm-primitives = { path = "rust/shm-primitives", version = "0.5.0" }

# External dependencies
libc = "0.2"
bitflags = "2"
bytes = "1"
tokio = { version = "1", features = ["sync", "rt", "time"] }
tokio-stream = "0.1"
# futures crates - minimal set without proc-macro overhead
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std", "async-await", "sink"] }
parking_lot = "0.12"

# facet ecosystem
facet = { git = "https://github.com/facet-rs/facet", branch = "main", features = ["camino"] }
facet-core = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-json = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-format-postcard = { git = "https://github.com/facet-rs/facet", branch = "main", features = ["jit", "camino"] }
facet-cargo-toml = { git = "https://github.com/bearcove/facet-cargo-toml", branch = "main" }

# WebSocket
tokio-tungstenite = "0.28"

# Web framework (no tokio feature = no tokio-macros = no syn)
axum = { version = "0.8", default-features = false, features = [
    "form", "http1", "json", "matched-path", "original-uri",
    "query", "tower-log", "tracing", "ws"
] }
rapace-axum-serve = { path = "rust/rapace-axum-serve" }

# Tracing
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Allocator API
allocator-api2 = "0.2"
static_assertions = "1.1.0"

# Buffer pool
object-pool = "0.6"

# FD passing utilities
async-send-fd = { version = "1.2", features = ["tokio"] }

# Testing
tokio-test-lite = "0.2"

# Wasm
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "WebSocket", "MessageEvent", "BinaryType", "ErrorEvent", "CloseEvent"] }
gloo-timers = { version = "0.3", features = ["futures"] }
web-time = "1"

[profile.release]
debug = 1
