[package]
name = "rapace-spec-subject"
version = "0.1.0"
edition = "2024"
description = "Real rapace-core implementation for spec testing"
license = "MIT OR Apache-2.0"
publish = false

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

# These dependencies are included for future use when we add service handlers
[package.metadata.cargo-shear]
ignored = ["rapace-protocol", "rapace-spec-proto", "facet", "facet-postcard"]

[[bin]]
name = "rapace-spec-subject"
path = "src/main.rs"

[dependencies]
rapace-core.workspace = true
rapace-protocol.workspace = true
rapace-spec-proto = { path = "../spec-proto" }
facet.workspace = true
facet-postcard.workspace = true
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
