[package]
name = "rapace-spec-tests"
version = "0.1.0"
edition = "2024"
description = "Test orchestrator for rapace spec conformance"
license = "MIT OR Apache-2.0"
publish = false

# facet is used transitively via facet-json in tests
[package.metadata.cargo-shear]
ignored = ["facet"]

[dependencies]
facet.workspace = true

[[test]]
name = "spec"
harness = false

[dev-dependencies]
facet-json.workspace = true
facet-postcard.workspace = true
libtest-mimic = "0.8"
owo-colors = "4"
rapace-protocol.workspace = true
tokio = { workspace = true, features = ["rt", "net", "io-util", "sync", "time", "macros", "process"] }
