[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
clap = { version = "4", features = ["derive"] }
xshell = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
