[package]
name = "rapace-cell"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "High-level cell runtime for rapace that eliminates boilerplate"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
rapace = { workspace = true, features = ["shm"] }
rapace-registry.workspace = true
rapace-introspection = { path = "../rapace-introspection", version = "0.4.0", optional = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
libc.workspace = true
facet.workspace = true

[features]
introspection = ["dep:rapace-introspection"]
