[package]
name = "rapace-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and traits for rapace RPC"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
async-stream.workspace = true
bitflags.workspace = true
facet.workspace = true
facet-core.workspace = true
futures.workspace = true
parking_lot.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest = "1"
