[package]
name = "rapace-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and traits for rapace RPC"
readme = "README.md"

[features]
default = ["mem", "stream"]
mem = []
stream = []
shm = ["dep:libc", "dep:static_assertions", "dep:allocator-api2", "dep:shm-primitives", "tokio/net"]
# websocket: universal feature that works on both native (tungstenite) and WASM (web-sys)
websocket = ["dep:tokio-tungstenite"]
# Explicit backend selection (optional, for fine-grained control)
websocket-tungstenite = ["websocket"]
websocket-axum = ["websocket", "dep:axum"]
websocket-wasm = ["websocket"]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
allocator-api2 = { workspace = true, optional = true }
bitflags.workspace = true
bytes.workspace = true
facet.workspace = true
futures.workspace = true
libc = { workspace = true, optional = true }
object-pool.workspace = true
parking_lot.workspace = true
rapace-registry.workspace = true
static_assertions = { workspace = true, optional = true }
shm-primitives = { workspace = true, optional = true }
tokio.workspace = true
tracing.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true
# WASM: facet-format-postcard without JIT (cranelift doesn't support WASM)
facet-format-postcard = { git = "https://github.com/facet-rs/facet", branch = "main", features = ["camino"] }

# Native-only dependencies (not WASM-compatible)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["io-util", "net"] }
tokio-tungstenite = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
# Native: facet-format-postcard with JIT for fast deserialization
facet-format-postcard.workspace = true

[dev-dependencies]
tokio-test-lite.workspace = true
