[package]
name = "rapace-http"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP types and service trait for rapace RPC"
publish = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
tracing.workspace = true
rapace.workspace = true
rapace-testkit.workspace = true
facet.workspace = true
