[package]
name = "rapace-introspection"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Service introspection RPC service for rapace"
readme = "README.md"

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
rapace.workspace = true
rapace-registry.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt"] }
tokio-test-lite.workspace = true

[package.metadata.cargo-shear]
# tokio is actually needed by tokio_test_lite::test macro
ignored = ["tokio"]
