[package]
name = "rapace-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Proc macros for rapace RPC (#[rapace::service])"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
proc-macro-crate = "3.0"
unsynn = "0.3.0"
heck = "0.4"

[dev-dependencies]
rapace-core.workspace = true
