[package]
name = "rapace-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Proc macros for rapace RPC (#[rapace::service])"
readme = "README.md"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
unsynn = "0.3.0"
heck = "0.4"
facet-cargo-toml = { workspace = true }

[dev-dependencies]
rapace-core.workspace = true
trybuild = "1.0"
