[package]
name = "rapace-tracing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tracing subscriber that forwards spans/events over rapace RPC"

[dependencies]
rapace-core = { path = "../rapace-core" }
rapace-macros = { path = "../rapace-macros" }
rapace-registry = { path = "../rapace-registry" }
rapace-testkit = { path = "../rapace-testkit" }

# facet for serialization
facet = { git = "https://github.com/facet-rs/facet" }
facet-core = { git = "https://github.com/facet-rs/facet" }
facet-postcard = { git = "https://github.com/facet-rs/facet" }

# tracing ecosystem
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }

# async
tokio = { version = "1", features = ["sync", "rt"] }

# synchronization
parking_lot = "0.12"
