[package]
name = "rapace-tracing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tracing subscriber that forwards spans/events over rapace RPC"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
rapace.workspace = true
rapace-testkit.workspace = true
facet.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["sync", "rt"] }
parking_lot.workspace = true
