[package]
name = "rapace-transport-mem"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "In-process transport for rapace (semantic reference implementation)"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
rapace-core.workspace = true
tokio.workspace = true

[dev-dependencies]
rapace-testkit.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
