[package]
name = "rapace-transport-shm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared memory transport for rapace (performance reference implementation)"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]
default = []
# Enable the ShmAllocator for zero-copy allocation directly into SHM slots.
# This is an optional optimization - services remain transport-agnostic.
allocator = ["allocator-api2"]

[dependencies]
rapace-core.workspace = true
tokio = { workspace = true, features = ["net"] }
libc.workspace = true
tracing = { workspace = true }

# Optional: allocator-api2 for ShmAllocator
allocator-api2 = { workspace = true, optional = true }

[dev-dependencies]
rapace-testkit.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
# Enable allocator for tests
allocator-api2.workspace = true
