[package]
name = "rapace-transport-stream"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TCP/Unix socket transport for rapace"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
rapace-core.workspace = true
tokio = { workspace = true, features = ["io-util"] }

[dev-dependencies]
rapace-testkit.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "net", "io-util"] }
