[package]
name = "rapace-transport-websocket"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WebSocket transport for rapace"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
rapace-core.workspace = true
futures.workspace = true
parking_lot.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true
tokio-tungstenite.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
js-sys.workspace = true
web-sys.workspace = true
gloo-timers.workspace = true

[dev-dependencies]
rapace-testkit.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "net"] }
