[package]
name = "rapace"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance RPC framework with shared memory transport"

[dependencies]
tracing = { workspace = true }
# Core types and traits
rapace-core = { workspace = true }

# Proc macros (re-exported as #[rapace::service])
rapace-macros = { workspace = true }

# Registry for service/method metadata
rapace-registry = { workspace = true }

# Transports (behind feature flags)
rapace-transport-mem = { workspace = true, optional = true }
rapace-transport-stream = { workspace = true, optional = true }
rapace-transport-websocket = { workspace = true, optional = true }
rapace-transport-shm = { workspace = true, optional = true, features = ["allocator"] }

# Serialization
facet = { workspace = true }
facet-core = { workspace = true }
facet-postcard = { workspace = true }
futures = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["net", "io-util"], optional = true }
parking_lot.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-stream = { workspace = true }

[features]
default = ["mem", "stream", "shm"]

# Transport features
mem = ["dep:rapace-transport-mem"]
stream = ["dep:rapace-transport-stream", "dep:tokio"]
websocket = ["dep:rapace-transport-websocket"]
shm = ["dep:rapace-transport-shm"]

# All transports
full = ["mem", "stream", "websocket", "shm"]
