[package]
name = "ur-taking-me-with-you"
version = "0.3.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Ensure child processes die when their parent dies"
repository = "https://github.com/bearcove/rapace"
keywords = ["process", "child", "parent", "death", "cleanup"]
categories = ["os", "development-tools"]

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]
tokio = ["dep:tokio"]

[dependencies]
tokio = { version = "1", features = ["process"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.176"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.176"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_JobObjects", "Win32_System_Threading"] }

[dev-dependencies]
