[package]
name = "rapace-browser-tests-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM harness that exercises rapace BrowserDemo services from the browser tests"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rapace = { path = "../../crates/rapace", default-features = false, features = ["websocket"] }
rapace-browser-tests-proto = { path = "../browser-tests-proto" }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = ["console"] }
console_error_panic_hook = "0.1"
