[package]
name = "rapace-browser-tests-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WebSocket harness that drives the rapace browser integration tests"
publish = false

[[bin]]
name = "rapace-browser-tests-server"
path = "src/main.rs"

[dependencies]
rapace = { path = "../../rust/rapace", default-features = false, features = ["websocket"] }
rapace-browser-tests-proto = { path = "../browser-tests-proto" }
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time"] }
tokio-stream = "0.1"
tokio-tungstenite = "0.28"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
