[package]
name = "rapace-dashboard"
version = "0.1.1"
edition = "2021"
publish = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[[bin]]
name = "rapace-dashboard"
path = "src/main.rs"

[dependencies]
rapace = { path = "../../crates/rapace", features = ["websocket"] }

# Web server
axum = { version = "0.8", features = ["json"] }
futures = "0.3"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "sync", "time"] }
tokio-stream = "0.1"
tokio-tungstenite = "0.26"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# facet for shapes (required by macro-generated code)
facet = "0.32.1"
facet-core = "0.32.1"
facet-postcard = "0.32.1"
facet-value = "0.32.1"
facet-json = "0.32.1"

# CLI output
owo-colors = "4"
tracing = "0.1"
