[package]
name = "rapace-dashboard"
version = "0.4.0"
edition = "2024"
publish = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[[bin]]
name = "rapace-dashboard"
path = "src/main.rs"

[dependencies]
rapace = { path = "../../crates/rapace", features = ["websocket"] }

# Web server
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "sync", "time"] }
tokio-stream = "0.1"
tokio-tungstenite = "0.28"
serde_json = "1"

# facet for shapes (required by macro-generated code)
facet = "0.32.1"

# CLI output
owo-colors = "4"
