[package]
name = "rapace-http-over-rapace"
version = "0.5.0"
edition = "2024"
publish = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "http-over-rapace"
path = "src/main.rs"

# Helper binary for cross-process tests (acts as plugin)
[[bin]]
name = "http-plugin-helper"
path = "src/helper.rs"

[dependencies]
# Rapace crates
rapace = { path = "../../rust/rapace" }
rapace-http = { path = "../../rust/rapace-http" }
demo-helper-common = { path = "../demo-helper-common" }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "io-util", "net", "process"] }

# Plugin side: axum for HTTP routing (no tokio feature = no tokio-macros)
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tracing"] }
tower-service = "0.3"
http = "1.0"
http-body-util = "0.1"
bytes = "1"

# Host side: hyper for lightweight HTTP server
hyper = { version = "1.0", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }

# Shared
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
async-send-fd.workspace = true
libc.workspace = true
tokio-test-lite.workspace = true
